[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "kreuzberg-examples-python"
version = "4.0.3"
description = "Kreuzberg Python binding examples"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["kreuzberg"]

[tool.hatch.build.targets.wheel]
only-include = ["*.py"]

[tool.uv.sources]
kreuzberg = { workspace = true }
