[package]
name = "kreuzberg-e2e-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
camino = "1.2"
clap = { workspace = true }
itertools = { workspace = true }
kreuzberg = { path = "../../crates/kreuzberg", features = ["full"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
