[workspace]

[package]
name = "kreuzberg-test-app-rust"
version = "4.4.2"
edition = "2024"
rust-version = "1.91"
authors = ["Kreuzberg Contributors"]
license = "MIT OR Apache-2.0"
description = "Comprehensive API coverage test for Kreuzberg 4.4.2 Rust library"
readme = "README.md"
publish = false

[lints.clippy]
collapsible_if = "allow"

[dependencies]
kreuzberg = { version = "4.4.1", features = ["static-pdfium", "excel", "office", "html"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "kreuzberg-test"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
